--- a/css/style.css
+++ b/css/style.css
@@ -10039,8 +10039,8 @@ h6,
 /* Language Tags */
 .cplusplus {
   border-radius: 50px;
-  border: 2px solid purple;
-  background-color: purple;
+  border: 2px solid var(--dark-purple);
+  background-color: var(--dark-purple);
   color: white;
   font-size: 18px;
 }
