--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@
   --light-blue: rgb(0, 225, 255);
   --dark-purple: #b802ac;
   --light-orange: rgb(215, 116, 2);
+  --magenta: #9B023A;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
@@ -9979,7 +9980,7 @@ h6,
 }
 
 .dark-purple{
-  background-color: var(--dark-purple); 
+  background-color: var(--magenta); 
 }
 .orange{
   background-color: var(--orange);
@@ -10039,8 +10040,8 @@ h6,
 /* Language Tags */
 .cplusplus {
   border-radius: 50px;
-  border: 2px solid var(--dark-purple);
-  background-color: var(--dark-purple);
+  border: 2px solid var(--magenta);
+  background-color: var(--magenta);
   color: white;
   font-size: 18px;
 }
