project section update

--- a/css/style.css
+++ b/css/style.css
@@ -10101,6 +10101,13 @@ h6,
   background-color: var(--primary);
   font-size: 18px;
 }
+.deep-learning {
+  border-radius: 50px;
+  border: 2px solid var(--pink); 
+  color: white;
+  background-color: var(--pink);
+  font-size: 18px;
+}
 
 
 
