--- a/css/style.css
+++ b/css/style.css
@@ -10108,9 +10108,13 @@ h6,
   background-color: var(--pink);
   font-size: 18px;
 }
-
-
-
+.full-stack {
+  border-radius: 50px;
+  border: 2px solid #7ED200; 
+  color: white;
+  background-color: #7ED200;
+  font-size: 18px;
+}
 
 
 @media screen and (max-width: 900px) {
