Fixed a button on projects section

--- a/css/style.css
+++ b/css/style.css
@@ -10108,7 +10108,7 @@ h6,
   background-color: var(--pink);
   font-size: 18px;
 }
-.full-stack {
+.full-stack-btn {
   border-radius: 50px;
   border: 2px solid #7ED200; 
   color: white;
