Started changing the background color

--- a/css/style.css
+++ b/css/style.css
@@ -9527,7 +9527,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #0F385C !important;
+  color: #09253D !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
