--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@font-face {
+  font-family: gameFont;
+  src: url(../fonts/eight_bit_madness/Eight-Bit\ Madness.ttf);
+}
 
 :root {
   --blue: #00274C;
@@ -61,9 +65,9 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #6c757d;
+  color: #FFCB05;
   text-align: left;
-  background-color: #fcfcfc;
+  background-color: #00162B;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -210,7 +214,7 @@ table {
 caption {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-  color: #6c757d;
+  color: #FFCB05;
   text-align: left;
   caption-side: bottom;
 }
@@ -366,7 +370,7 @@ h1, h2, h3, h4, h5, h6,
   margin-bottom: 0.5rem;
   font-weight: 500;
   line-height: 1.2;
-  color: #343a40;
+  color: #FFCB05;
 }
 
 h1, .h1 {
@@ -520,7 +524,7 @@ mark,
 .blockquote-footer {
   display: block;
   font-size: 80%;
-  color: #6c757d;
+  color: #FFCB05;
 }
 
 .blockquote-footer::before {
@@ -552,7 +556,7 @@ mark,
 
 .figure-caption {
   font-size: 90%;
-  color: #6c757d;
+  color: #FFCB05;
 }
 
 code {
@@ -1536,7 +1540,7 @@ pre code {
 .table {
   width: 100%;
   margin-bottom: 1rem;
-  color: #6c757d;
+  color: #FFCB05;
 }
 
 .table th,
@@ -1586,7 +1590,7 @@ pre code {
 }
 
 .table-hover tbody tr:hover {
-  color: #6c757d;
+  color: #FFCB05;
   background-color: rgba(0, 0, 0, 0.075);
 }
 
@@ -1917,7 +1921,7 @@ pre code {
 }
 
 .form-control::placeholder {
-  color: #6c757d;
+  color: #FFCB05;
   opacity: 1;
 }
 
@@ -1973,7 +1977,7 @@ select.form-control:focus::-ms-value {
   margin-bottom: 0;
   font-size: 1rem;
   line-height: 1.5;
-  color: #6c757d;
+  color: #FFCB05;
   background-color: transparent;
   border: solid transparent;
   border-width: 1px 0;
@@ -2044,7 +2048,7 @@ textarea.form-control {
 
 .form-check-input[disabled] ~ .form-check-label,
 .form-check-input:disabled ~ .form-check-label {
-  color: #6c757d;
+  color: #FFCB05;
 }
 
 .form-check-label {
@@ -2329,7 +2333,7 @@ textarea.form-control {
 .btn {
   display: inline-block;
   font-weight: 400;
-  color: #6c757d;
+  color: #FFCB05;
   text-align: center;
   vertical-align: middle;
   user-select: none;
@@ -2349,7 +2353,7 @@ textarea.form-control {
 }
 
 .btn:hover {
-  color: #6c757d;
+  color: #FFCB05;
   text-decoration: none;
 }
 
@@ -2700,7 +2704,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-secondary {
-  color: #6c757d;
+  color: #FFCB05;
   border-color: #6c757d;
 }
 
@@ -2715,7 +2719,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
-  color: #6c757d;
+  color: #FFCB05;
   background-color: transparent;
 }
 
@@ -2892,7 +2896,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-dark {
-  color: #343a40;
+  color: #FFCB05;
   border-color: #343a40;
 }
 
@@ -2939,7 +2943,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-link:disabled, .btn-link.disabled {
-  color: #6c757d;
+  color: #FFCB05;
   pointer-events: none;
 }
 
@@ -3040,7 +3044,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 1rem;
-  color: #6c757d;
+  color: #FFCB05;
   text-align: left;
   list-style: none;
   background-color: #fff;
@@ -3227,7 +3231,7 @@ input[type="button"].btn-block {
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
-  color: #6c757d;
+  color: #FFCB05;
   pointer-events: none;
   background-color: transparent;
 }
@@ -3241,7 +3245,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 1.5rem;
   margin-bottom: 0;
   font-size: 0.875rem;
-  color: #6c757d;
+  color: #FFCB05;
   white-space: nowrap;
 }
 
@@ -3601,7 +3605,7 @@ input[type="button"].btn-block {
 }
 
 .custom-control-input[disabled] ~ .custom-control-label, .custom-control-input:disabled ~ .custom-control-label {
-  color: #6c757d;
+  color: #FFCB05;
 }
 
 .custom-control-input[disabled] ~ .custom-control-label::before, .custom-control-input:disabled ~ .custom-control-label::before {
@@ -3745,7 +3749,7 @@ input[type="button"].btn-block {
 }
 
 .custom-select:disabled {
-  color: #6c757d;
+  color: #FFCB05;
   background-color: #e9ecef;
 }
 
@@ -4027,7 +4031,7 @@ input[type="button"].btn-block {
 }
 
 .nav-link.disabled {
-  color: #6c757d;
+  color: #FFCB05;
   pointer-events: none;
   cursor: default;
 }
@@ -4051,7 +4055,7 @@ input[type="button"].btn-block {
 }
 
 .nav-tabs .nav-link.disabled {
-  color: #6c757d;
+  color: #FFCB05;
   background-color: transparent;
   border-color: transparent;
 }
@@ -4714,7 +4718,7 @@ input[type="button"].btn-block {
 .breadcrumb-item + .breadcrumb-item::before {
   display: inline-block;
   padding-right: 0.5rem;
-  color: #6c757d;
+  color: #FFCB05;
   content: "/";
 }
 
@@ -4727,7 +4731,7 @@ input[type="button"].btn-block {
 }
 
 .breadcrumb-item.active {
-  color: #6c757d;
+  color: #FFCB05;
 }
 
 .pagination {
@@ -4781,7 +4785,7 @@ input[type="button"].btn-block {
 }
 
 .page-item.disabled .page-link {
-  color: #6c757d;
+  color: #FFCB05;
   pointer-events: none;
   cursor: auto;
   background-color: #fff;
@@ -5221,7 +5225,7 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-action:active {
-  color: #6c757d;
+  color: #FFCB05;
   background-color: #e9ecef;
 }
 
@@ -5244,7 +5248,7 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item.disabled, .list-group-item:disabled {
-  color: #6c757d;
+  color: #FFCB05;
   pointer-events: none;
   background-color: #fff;
 }
@@ -5601,7 +5605,7 @@ a.close.disabled {
   display: flex;
   align-items: center;
   padding: 0.25rem 0.75rem;
-  color: #6c757d;
+  color: #FFCB05;
   background-color: rgba(255, 255, 255, 0.85);
   background-clip: padding-box;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
@@ -6079,7 +6083,7 @@ a.close.disabled {
   padding: 0.5rem 0.75rem;
   margin-bottom: 0;
   font-size: 1rem;
-  color: #343a40;
+  color: #FFCB05;
   background-color: #f7f7f7;
   border-bottom: 1px solid #ebebeb;
   border-top-left-radius: calc(0.3rem - 1px);
@@ -6092,7 +6096,7 @@ a.close.disabled {
 
 .popover-body {
   padding: 0.5rem 0.75rem;
-  color: #6c757d;
+  color: #FFCB05;
 }
 
 .carousel {
@@ -6489,7 +6493,7 @@ button.bg-dark:focus {
 }
 
 .border-secondary {
-  border-color: #6c757d !important;
+  border-color: #FFCB05 !important;
 }
 
 .border-success {
@@ -9535,7 +9539,7 @@ a.text-primary:hover, a.text-primary:focus {
 }
 
 .text-secondary {
-  color: #6c757d !important;
+  color: #FFCB05 !important;
 }
 
 a.text-secondary:hover, a.text-secondary:focus {
@@ -9583,7 +9587,7 @@ a.text-light:hover, a.text-light:focus {
 }
 
 .text-dark {
-  color: #343a40 !important;
+  color: #FFCB05 !important;
 }
 
 a.text-dark:hover, a.text-dark:focus {
@@ -9591,11 +9595,11 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-body {
-  color: #6c757d !important;
+  color: #FFCB05 !important;
 }
 
 .text-muted {
-  color: #6c757d !important;
+  color: #FFCB05 !important;
 }
 
 .text-black-50 {
@@ -9798,7 +9802,7 @@ h6,
 
 .navbar-light .navbar-nav .nav-link {
   padding: 25px 10px;
-  color: #343a40;
+  color: #FFCB05;
   font-weight: 500;
   outline: none;
 }
